--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,6 +20,9 @@
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
      </widget>
     </item>
    </layout>
